--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <input type="text" name="" id="input" autofocus autocomplete="off">
         <button id="getWordBtn" hidden></button>
     </form>
-    <span>time: </span><span id="timer">0</span>
+    <!-- <span>time: </span><span id="timer">0</span> -->
     <p id="score"></p>
 </body>
 </html>
