--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     <h1>Speed Typing</h1>
-    <div id="container"></div>
+    <div id="container">
     <form action="">
+        <p id="word"></p>
         <select id="language">
             <option value="en">English</option>
             <option value="de">German</option>
@@ -21,8 +22,9 @@
         </select>
         <input type="text" name="" id="input" autofocus autocomplete="off">
         <button id="getWordBtn" hidden></button>
+        <p id="score"></p>
     </form>
     <!-- <span>time: </span><span id="timer">0</span> -->
-    <p id="score"></p>
+</div>
 </body>
 </html>
