--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Speed Typing</title>
 </head>
 <body>
-    <h1>Speed Typing</h1>
+    <h1>Speed Typing</h1><br>
+    <span>Time: </span><span id="timer">30</span>
     <div id="container">
     <form action="">
         <p id="word"></p>
@@ -24,7 +25,6 @@
         <button id="getWordBtn" hidden></button>
         <p id="score"></p>
     </form>
-    <!-- <span>time: </span><span id="timer">0</span> -->
 </div>
 </body>
 </html>
